# ACE

./: .gitignore  BUG_FIX_SUMMARY.md  CLAUDE.md  FINAL_FIX_SUMMARY.md  README.md  README_EN.md  STREAMLIT_README.md  STREAMLIT_SUMMARY.md  fibonacci.py  main.py  pyproject.toml  run_example.py  run_streamlit.py  streamlit_app.py  test_streamlit.py
ace/: __init__.py  ace_framework.py  config_loader.py  curator.py  generator.py  llm_client.py  mcp_client.py  models.py  reflector.py  streamlit_utils.py
docs/: MCP_INTEGRATION.md
examples/: basic_usage.py  mcp_integration_example.py
tests/: test_ace.py  test_mcp_integration.py
